--- a/config.toml
+++ b/config.toml
@@ -1,21 +1,21 @@
-baseurl = "http://vjeantet.fr/"
-languageCode = "fr-FR"
-title = "Valère JEANTET"
+baseurl = "http://excellentnomad.com"
+languageCode = "en-US"
+title = "Atabek AKBALAEV"
 paginate = 5
 DisqusShortname = "vjeantet"
 Copyright = "All rights reserved - 2016"
 theme = "casper"
 [params]
-  description = "Whatever the mind of man can conceive and believe, it can achieve."
+  description = "Whatever the mind of man can conceive and believe, it can be achieved."
   cover = "images/cover_polenord.jpg"
-  author = "Valère JEANTET"
-  authorlocation = "Paris, France"
-  authorwebsite = "http://vjeantet.fr"
+  author = "Atabek AKBALAEV"
+  authorlocation = "St. Louis, US"
+  authorwebsite = "http://excellentnomad.com"
   bio= "IT software and Security Engineer, Open source enthusiast."
   logo = "images/logo.png"
-  googleAnalyticsUserID = "UA-79101-12"
-  githubName = "vjeantet"
-  twitterName = "vjeantet"
+  googleAnalyticsUserID = ""
+  githubName = "atabek"
+  twitterName = "excellentnomad"
   # set true if you are not proud of using Hugo (true will hide the footer note "Proudly published with HUGO.....")
   hideHUGOSupport = false
 
@@ -33,20 +33,20 @@ theme = "casper"
   name = "Github repos"
   weight = 100
   pre = "<h3>Follow me</h3>"
-  url = "https://github.com/vjeantet"
+  url = "https://github.com/atabek"
 
 [[menu.main]]
   name = "Twitter timeline"
   weight = 101
-  url = "https://twitter.com/vjeantet"
+  url = "https://twitter.com/excellentnomad"
 
 [[menu.main]]
   name = "Flipboard magazines"
   weight = 102
-  url = "https://flipboard.com/@vjeantet"
+  url = "https://flipboard.com/@AtabekAkbalaev"
 
-[[menu.main]]
-  name = "Keybase (secure msg)"
-  weight = 109
-  pre = "<h3>Contact me</h3>"
-  url = "https://Keybase.io/vjeantet"
+#[[menu.main]]
+#  name = "Keybase (secure msg)"
+#  weight = 109
+#  pre = "<h3>Contact me</h3>"
+#  url = "https://Keybase.io/vjeantet"
