added / at the end of baseUrl

--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://excellentnomad.com"
+baseurl = "http://excellent-nomad-1989.appspot.com/"
 languageCode = "en-US"
 title = "Atabek AKBALAEV"
 paginate = 5
